<resources>
    <string name="app_name">Parking Service</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to shows your current location on the map.</string>
    <string name="location_permission_denied">This app requires location permission to enable Google Maps. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Parking Service\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="welcome">Welcome to Fred\'s Parking Service</string>
    <string name="new_ticket">New Ticket</string>
    <string name="my_ticket">My Ticket</string>
    <string name="ticket_history">Ticket History</string>
    <string name="park_details">Park Details</string>
    <string name="visa">VISA</string>
    <string name="payment_header">Please choose your channel of payment</string>
    <string name="momo">Mobile Money</string>
    <string name="pay">Pay</string>
    <string name="rate">Fetching parking rate...</string>
    <string name="new_ticket_page">Create New Ticket</string>
    <string name="ACCEPT">Accept</string>
    <string name="CANCEL">Cancel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="go_to_register">Sign Up</string>
    <!-- Strings related to register -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_up">Register</string>

    <string name="qr_code">qr_code</string>
    <string name="loading">Loading...</string>
    <string name="settings">Settings</string>
    <string name="park_list">Park List</string>
    <string name="logout">Log out</string>
    <string name="cash">Cash</string>
    <string name="payment_channel">Payment Channel</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="hello_blank_fragment">Hello</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="root_preferences">root_preferences</string>

</resources>